--- a/BACK/package.json
+++ b/BACK/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "express": "^4.19.2"
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "mysql2": "^3.9.7"
   }
 }
