--- a/BACK/package.json
+++ b/BACK/package.json
@@ -7,6 +7,10 @@
     "mysql2": "^3.9.7"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.4.1"
+    "@faker-js/faker": "^8.4.1",
+    "jest": "^29.7.0"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
