--- a/FRONT/package.json
+++ b/FRONT/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "node-localstorage": "^3.0.5"
   }
 }
