--- a/FRONT/package.json
+++ b/FRONT/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "node-fetch": "^2.7.0",
     "node-localstorage": "^3.0.5"
   }
